# am_crm_service

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  script_create_default_admin.py
.github/workflows/: pre-commit hooks.yml  pytest.yml
alembic/: env.py
alembic/versions/: 478f738932e8_initial_migration.py
app/: __init__.py  main.py
app/api/v1/: routers.py
app/api/v1/auth/login/: __init__.py  login_endpoints.py  login_models.py
app/api/v1/customers/: __init__.py  customer_endpoints.py
app/api/v1/users/: __init__.py  user_endpoints.py
app/core/: logger.py  security.py  settings.py
app/db/: __init__.py  base.py  db.py
app/db/actions/: __init__.py  customer_crud.py  user_crud.py
app/db/models/: __init__.py  customer_model.py  user_model.py
app/schemas/: customer_schemas.py  user_schemas.py
app/services/: storage_service.py
tests/: conftest.py  test_main.py
tests/core/: test_security.py  test_settings.py
tests/db/: __init__.py  test_base.py  test_db.py
tests/db/actions/: __init__.py  test_customer_crud.py  test_user_crud.py
tests/db/models/: __init__.py  test_customer_model.py  test_user_model.py
tests/endpoints/: __init__.py  test_customer_endpoints.py  test_login_endpoints.py  test_user_endpoints.py
tests/services/: test_storage_service.py
